@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "15 March 2015" "" ""
+.TH TURN 1 "20 March 2015" "" ""
 .SH GENERAL INFORMATION
 
 \fIturnadmin\fP is a TURN administration tool. This tool can be used to manage 
@@ -64,6 +64,17 @@ $ \fIturnadmin\fP [ \fB\-h\fP | \fB\-\-help\fP]
 .TP
 .B
 Commands:
+.TP
+.B
+\fB\-P\fP, \fB\-\-generate\-encrypted\-password\fP
+Generate and print to the standard
+output an encrypted form of a password (for web admin user, or shared
+secret, or CLI). The value then can be used as a safe key for the password
+storage on disk or in the database. Every invocation for the same password
+produces a different result. The for mat of the encrypted password is:
+$5$<\.\.\.salt\.\.\.>$<\.\.\.sha256(salt+password)\.\.\.>. Salt is 16 characters,
+the sha256 output is 64 characters. Character 5 is the algorithm id (sha256).
+Only sha256 is supported as the hash function.
 .TP
 .B
 \fB\-k\fP, \fB\-\-key\fP
@@ -203,6 +214,12 @@ Set value of realm's user\-quota parameter.
 Help.
 .TP
 .B
+Command examples:
+.PP
+Generate an encrypted form of a password:
+.PP
+$ \fIturnadmin\fP \fB\-P\fP \fB\-p\fP <password>
+.PP
 Generate a key:
 .PP
 $ \fIturnadmin\fP \fB\-k\fP \fB\-u\fP <username> \fB\-r\fP <realm> \fB\-p\fP <password>
